--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="container mt-5" >
+  <div class="container mt-5">
     <div class="row d-flex align-items-lg-center">
       <div class="col-md-6" id="img-bg"></div>
 
@@ -22,18 +22,10 @@
             <textarea id="message" name="message" class="linha"></textarea>
           </div>
 
-          <a
-            class="text-center btn btn-outline-info mt-4 mb-4"
-            href="mailto:furandoabolha2021@gmail.com?Subject=Sugestões,%20Denuncias,%20Reclamação"
-            >Enviar email</a
-          >
-          <a
-            type="reset"
-            value="Cancelar"
-            [routerLink]="['/inicio']"
-            class="btn btn-outline-dark mt-3"
-          >
-		  Cancelar
+          <a class="text-center btn btn-outline-info mt-4 mb-4"
+            href="mailto:furandoabolha2021@gmail.com?Subject=Sugestões,%20Denuncias,%20Reclamação">Enviar email</a>
+          <a type="reset" value="Cancelar" [routerLink]="['/inicio']" class="btn btn-outline-dark mt-3">
+            Cancelar
           </a>
         </form>
       </div>
