--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,50 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white p-0 mb-0 fixed-top">
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#conteudoNavbarSuportado"
-    aria-controls="conteudoNavbarSuportado"
-    aria-expanded="false"
-    aria-label="Alterna navegação"
-  >
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+    aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div
-    class="collapse navbar-collapse margintananan"
-    id="conteudoNavbarSuportado"
-  >
+  <div class="collapse navbar-collapse margintananan" id="conteudoNavbarSuportado">
     <ul class="navbar-nav mr-auto d-flex align-items-center mt-3">
       <li class="nav-item active">
         <a [routerLink]="['/inicio']">
-          <img
-            src="https://i.imgur.com/Te8111D.png"
-            alt="Furando a bolha"
-            width="82px"
-            height="38px"
-          />
+          <img src="https://i.imgur.com/Te8111D.png" alt="Furando a bolha" width="82px" height="38px" />
         </a>
       </li>
 
       <li class="nav-item active text-center">
         <form class="form-inline ml-5">
-          <input
-            class="linha pesquisa"
-            type="search"
-            placeholder="Postagem por tema"
-            aria-label="Pesquisar"
-            [(ngModel)]="tituloPost"
-            (click)="pesquisarProdutos(tituloPost)"
-          />
+          <input class="linha pesquisa" type="search" placeholder="Postagem por tema" aria-label="Pesquisar"
+            [(ngModel)]="tituloPost" (click)="pesquisarProdutos(tituloPost)" />
           <a href="" class="fontBlue">
             <img
               src="https://media.discordapp.net/attachments/890758555806859317/898188982297452594/Design_sem_nome_20.png?width=390&height=390"
-              alt="lupa"
-              width="40px"
-              height="40px"
-              id="imgLupa"
-            />
+              alt="lupa" width="40px" height="40px" id="imgLupa" />
           </a>
         </form>
       </li>
@@ -69,11 +44,7 @@
       </li>
 
       <li class="form-inline ml-5 text-muted text-center">
-        <a
-          [routerLink]="['/minhas-postagens']"
-          class="text-muted"
-          (click)="findByIdUser()"
-        >
+        <a [routerLink]="['/minhas-postagens']" class="text-muted" (click)="findByIdUser()">
           <i class="fa fa-list-alt fa-lg" aria-hidden="true">
             <p class="m-0">Minhas Postagens</p>
           </i>
@@ -91,12 +62,8 @@
 
     <ul class="navbar-nav ml-auto d-flex align-items-center mt-3">
       <li class="nav-item pl-3">
-        <a
-          [routerLink]="['/entrar']"
-          class="m-0 font-weight-bold fs-16 text-muted"
-        >
-          <i class="material-icons"
-            >exit_to_app
+        <a [routerLink]="['/entrar']" class="m-0 font-weight-bold fs-16 text-muted">
+          <i class="material-icons">exit_to_app
             <p>Sair</p>
           </i>
         </a>
