--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="usuario">Senha</label>
+                        <label for="senha">Senha</label>
                         <input [(ngModel)]='usuarioLogin.senha' class="linha" type="password" name="senha" id="senha"
                         >
                     </div>
