--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,9 @@
 <!-- Começo do canto direito do feed -->
 <div class="container-fluid bgBlue">
-  <div id="div1" class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo">
+  <div
+    id="div1"
+    class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
+  >
     <div class="justify-content-center text-center">
       <div>
         <h3>O MAIS FURADOS</h3>
@@ -37,18 +40,24 @@
             <ul class="social-network m-0">
               <li>
                 <a href="" class="text-muted" [routerLink]="['/contato']">
-                  
-                
                   <i class="fa fa-envelope-o" aria-hidden="true"></i>
                 </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/furando-a-bolha-5b2442222/" target="_blank" class="icoLinkedin">
+                <a
+                  href="https://www.linkedin.com/in/furando-a-bolha-5b2442222/"
+                  target="_blank"
+                  class="icoLinkedin"
+                >
                   <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                 </a>
               </li>
               <li>
-                <a href="https://www.instagram.com/furandoabolha21/" target="_blank" class="icoInstagram">
+                <a
+                  href="https://www.instagram.com/furandoabolha21/"
+                  target="_blank"
+                  class="icoInstagram"
+                >
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
               </li>
@@ -74,18 +83,19 @@
       <div class="row"></div>
       <div class="row margintopimg justify-content-center">
         <div class="testimonials-col">
-
-          <img class="imgsub" src="{{ foto }}">
-          <li class="nav-item edit">
-
-
-          </li>
+          <img class="imgsub" src="{{ foto }}" />
+          <li class="nav-item edit"></li>
 
           <div class="font-20 nomefeed mt-4">
             <h3>{{ nome }}</h3>
             <a [routerLink]="['/user-edit', id]">
-              <p><small class="text-white">Editar</small> <i class="fa fa-pencil-square-o justify-content-center"
-                  aria-hidden=true></i></p>
+              <p>
+                <small class="text-white">Editar</small>
+                <i
+                  class="fa fa-pencil-square-o justify-content-center"
+                  aria-hidden="true"
+                ></i>
+              </p>
             </a>
           </div>
         </div>
@@ -94,7 +104,11 @@
         <div class="main">
           <div class="sub-main">
             <div class="row justify-content-center">
-              <button class="btn btn-outline-light" data-toggle="modal" data-target="#novaPostagem">
+              <button
+                class="btn btn-outline-light"
+                data-toggle="modal"
+                data-target="#novaPostagem"
+              >
                 Post
               </button>
             </div>
@@ -109,7 +123,11 @@
 
   <div id="div2" class="col-md-6 col-sm-12 container mb-5 mt-5" id="postagens">
     <nav>
-      <div class="nav tama d-flex justify-content-center" id="nav-tab" role="tablist"></div>
+      <div
+        class="nav tama d-flex justify-content-center"
+        id="nav-tab"
+        role="tablist"
+      ></div>
     </nav>
     <div class="card-rows justify-content-center">
       <div *ngFor="let item of listaPostagens">
@@ -127,30 +145,68 @@
             <div class="font-20 text-left">{{ item.titulo }}</div>
             <div class="m-12 text-left">{{ item.texto }}</div>
             <div class="m-12 text-center mudaFonte">
-              <button (click)="getPostagemById(item.id)" (click)='curtida(item.id)' class="mudaFonte bgBlue btn p-0">
-                <img src="https://i.imgur.com/bQ6QUon.png" alt="" width="100px" height="50px" class="bgBlue p-0">
+              <button
+                (click)="getPostagemById(item.id)"
+                (click)="curtida(item.id)"
+                class="mudaFonte bgBlue btn p-0"
+              >
+                <img
+                  src="https://i.imgur.com/bQ6QUon.png"
+                  alt=""
+                  width="100px"
+                  height="50px"
+                  class="bgBlue p-0"
+                />
               </button>
 
               Bolhas: {{ item.curtidas }}
-              <button (click)="getPostagemById(item.id)" (click)='descurtida(item.id)' class="mudaFonte bgBlue  btn">
-                <img src="https://i.imgur.com/sqUvqU7.png" alt="" width="100px" height="50px" class="bgBlue">
+              <button
+                (click)="getPostagemById(item.id)"
+                (click)="descurtida(item.id)"
+                class="mudaFonte bgBlue btn"
+              >
+                <img
+                  src="https://i.imgur.com/sqUvqU7.png"
+                  alt=""
+                  width="100px"
+                  height="50px"
+                  class="bgBlue"
+                />
               </button>
             </div>
 
             <!--LEMBRAR DE APAGAR OS PEIXES E GATOS DO ASSETS DE ARTUR-->
             <div>
-              <img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
-                width="100px" height="50px" />
-              <img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
-                width="100px" height="50px" />
-              <img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
-                width="100px" height="50px" />
-              <img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
-                width="100px" height="50px" />
-              <img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
-                width="100px" height="50px" />
-              <img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
-                width="100px" height="50px" />
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
             </div>
           </section>
         </div>
@@ -160,35 +216,65 @@
     <!--Fim do Feed-->
 
     <!-- Modal -->
-    <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
-      aria-hidden="true">
+    <div
+      class="modal fade"
+      id="novaPostagem"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="TituloModalCentralizado"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="TituloModalCentralizado">
               Nova Postagem
             </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Fechar"
+            >
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="form-group">
               <label for="titulo">Título</label>
-              <input type="text" class="linha" id="titulo" placeholder="Digite o título"
-                [(ngModel)]="postagem.titulo" />
+              <input
+                [(ngModel)]="postagem.titulo"
+                name="titulo"
+                type="text"
+                class="linha"
+                id="titulo"
+                placeholder="Digite o título"
+              />
             </div>
 
             <div class="form-group">
               <label for="texto">Texto</label>
-              <textarea class="linha" name="texto" id="texto" rows="3" [(ngModel)]="postagem.texto"></textarea>
+              <textarea
+                [(ngModel)]="postagem.texto"
+                name="texto"
+                class="linha"
+                id="texto"
+                rows="3"
+              ></textarea>
             </div>
 
             <div class="form-group">
-              <label for="texto">Escolha um tema ou
+              <label for="texto"
+                >Escolha um tema ou
                 <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>:
               </label>
-              <select name="tema" id="tema" class="linha" (change)="findByIdTema()" [(ngModel)]="idTema">
+              <select
+                [(ngModel)]="idTema"
+                name="idTema"
+                id="tema"
+                class="linha"
+                (change)="findByIdTema()"
+              >
                 <option *ngFor="let tema of listaTemas" value="{{ tema.id }}">
                   {{ tema.descricao }}
                 </option>
@@ -199,8 +285,12 @@
             <button type="button" class="btn btn-danger" data-dismiss="modal">
               Cancelar
             </button>
-            <button type="button" class="btn btn-outline-light bgBlue text-white" (click)="postar()"
-              data-dismiss="modal">
+            <button
+              type="button"
+              class="btn btn-outline-light bgBlue text-white"
+              (click)="postar()"
+              data-dismiss="modal"
+            >
               Publicar
             </button>
           </div>
