--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,7 +15,7 @@
       <li class="nav-item active text-center">
         <form class="form-inline ml-5">
           <input class="linha pesquisa" type="search" placeholder="Postagem por tema" aria-label="Pesquisar"
-            [(ngModel)]="tituloPost" (click)="pesquisarProdutos(tituloPost)" />
+            [(ngModel)]="tituloPost" name="tituloPost" (click)="pesquisarProdutos(tituloPost)" />
           <a href="" class="fontBlue">
             <img
               src="https://media.discordapp.net/attachments/890758555806859317/898188982297452594/Design_sem_nome_20.png?width=390&height=390"
