--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -131,7 +131,7 @@
                   <img src="https://i.imgur.com/sqUvqU7.png" alt="" width="100px" height="50px" class="bgBlue">
                 </button>
                 <button type="button" class="btn btn-outline-info marginbutton"  data-toggle="modal"
-                data-target="#editPostagem">Editar</button>
+                data-target="#editPostagem" (click)="getPostagemById(item.id)" (click)="getAllTemas()" >Editar</button>
                 <button type="button" class="btn btn-outline-danger">Deletar</button>
               </div>
   
@@ -306,7 +306,7 @@
             <button
               type="button"
               class="btn btn-outline-light bgBlue text-white"
-              (click)=""
+              (click)="atualizar()"
               data-dismiss="modal"
             >
               Publicar
