--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -136,7 +136,7 @@
                 </button>
                 <button type="button" class="btn btn-outline-info marginbutton"  data-toggle="modal"
                 data-target="#editPostagem" (click)="getPostagemById(item.id)" (click)="getAllTemas()" >Editar</button>
-                <button type="button" class="btn btn-outline-danger">Deletar</button>
+                <button type="button" class="btn btn-outline-danger" (click)="apagar(item.id)">Deletar</button>
               </div>
   
               <!--LEMBRAR DE APAGAR OS PEIXES E GATOS DO ASSETS DE ARTUR-->
