--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -133,8 +133,7 @@
       <div class="row d-flex justify-content-center mt-5 mb-5">
         <div class="col-md-4">
             <div class="form-group">
-                <input type="text" class="form-control" id="titulo" placeholder="Digite um
-                titulo de postagem para pesquisar" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+                <input type="text" class="form-control" id="titulo" placeholder="Pesquise por titulo" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
             </div>
   
         </div>
